--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="noch_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Ночь (x0.4):</span>
 					</div>		
-					<input type="number" id="noch" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
+					<input type="number" id="noch115" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
+					<input type="number" id="noch1530" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
+
 				</div>	
 <!-- ==== -->
 				
@@ -539,16 +541,16 @@
 		//doroga_out.value = parseInt((returnDor.Vyh115 + returnDor.Vyh1530 + returnDor.Prazd115 + returnDor.Prazd1530) * rub_v_сhas * 8);
 		
 		premia_tek.value = ((parseFloat(okl.value) + parseFloat(nadbavka.value) + parseFloat(dvoynaya.value)/2 + parseFloat(doroga_out.value)) * parseFloat(premia.value)).toFixed(1);
-        let noch115 =  parseFloat(night115.value * rub_v_сhas * 0.4).toFixed(2);
-        let noch1530 =  parseFloat(night1530.value * rub_v_сhas * 0.4).toFixed(2);
+	
+        let n115 = parseFloat(night115.value * rub_v_сhas * 0.4).toFixed(2);
+        let n1530 = parseFloat(night1530.value * rub_v_сhas * 0.4).toFixed(2);
+		noch115.value = parseFloat(n115).toFixed(2);
+		noch1530.value = parseFloat(n1530).toFixed(2);
+		console.log("night115 = " + noch115.value);
+		console.log("night1530 = " + noch1530.value);
 		
-		noch.value = parseFloat(noch115 + noch1530).toFixed(2);
-		console.log("night115 = " + noch115);
-		console.log("night1530 = " + noch1530);
-		
-		let summaVseh115 = (parseFloat(okl115) + parseFloat(dvoynaya115) + parseFloat(doroga_out115) + parseFloat(noch115)).toFixed(1); //+ parseInt(nadbavka115);
-		let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(noch1530) + parseFloat(premia_pred.value) + parseFloat(nadbavka115)).toFixed(1);
-		//let summaVseh = summaVseh115 + summaVseh1530 + parseInt(premia_pred.value);
+		let summaVseh115 = (parseFloat(okl115) + parseFloat(dvoynaya115) + parseFloat(doroga_out115) + parseFloat(n115)).toFixed(1); //+ parseInt(nadbavka115);
+		let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530) + parseFloat(premia_pred.value) + parseFloat(nadbavka115)).toFixed(1);
 		let rk_only115 = parseFloat(summaVseh115 * 0.15).toFixed(1);
 		let rk_only1530 = parseFloat(summaVseh1530 * 0.15).toFixed(1);
 		rk_only.value = (parseFloat(rk_only115) + parseFloat(rk_only1530)).toFixed(1);
