--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="noch_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Ночь (x0.4):</span>
 					</div>		
-					<input type="number" id="noch115" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
-					<input type="number" id="noch1530" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
+					<input type="number" id="noch" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>					
+<!-- 					<input type="number" id="noch115" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
+					<input type="number" id="noch1530" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly> -->
 
 				</div>	
 <!-- ==== -->
@@ -544,10 +545,11 @@
 	
         let n115 = parseFloat(night115.value * rub_v_сhas * 0.4).toFixed(2);
         let n1530 = parseFloat(night1530.value * rub_v_сhas * 0.4).toFixed(2);
-		noch115.value = parseFloat(n115).toFixed(2);
-		noch1530.value = parseFloat(n1530).toFixed(2);
-		console.log("night115 = " + noch115.value);
-		console.log("night1530 = " + noch1530.value);
+		//noch115.value = parseFloat(n115).toFixed(2);
+		//noch1530.value = parseFloat(n1530).toFixed(2);
+		noch.value = parseFloat(n115 + n1530).toFixed(2);
+		console.log("night115 = " + n115);
+		console.log("night1530 = " + n1530);
 		
 		let summaVseh115 = (parseFloat(okl115) + parseFloat(dvoynaya115) + parseFloat(doroga_out115) + parseFloat(n115)).toFixed(1); //+ parseInt(nadbavka115);
 		let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530) + parseFloat(premia_pred.value) + parseFloat(nadbavka115)).toFixed(1);
