--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
 	var	dor1530_rab = 0;
 	var	dor1530_prazd = 0;	
 	
-	const prazdniki = ['2021-11-04', '2021-11-05', '2021-12-31', '2022-01-01', '2022-01-02', '2022-01-03', '2022-01-04', '2022-01-05', 
-			   '2022-01-06', '2022-01-07', '2022-01-08', '2022-02-23', '2022-03-08', '2022-05-01', '2022-05-02', '2022-05-03', '2022-05-04',
-			   '2022-05-09', '2022-05-10', '2022-06-13', '2022-07-11', '2022-10-11', '2022-11-04'];
-	const korotkiy = ['2022-02-22', '2022-03-07', '2022-07-08', '2022-10-10', '2022-11-03'];				   
+	const prazdniki = ['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-04', '2023-01-05', '2023-01-06', '2023-01-07', '2023-01-08',
+			   '2023-02-23', '2023-02-24', '2023-03-08', '2023-04-21', '2023-05-01', '2023-05-08', '2023-05-09', '2023-06-12',
+			   '2023-06-28', '2023-10-11', '2023-11-04', '2023-11-06'];
+	const korotkiy = ['2023-02-22', '2023-03-07', '2023-04-20', '2023-06-27', '2023-10-10', '2023-11-03'];				   
 
 	function calculate(mesto, daty, id_mess, attr_mess) { 
 		var All115 = 0;
@@ -579,7 +579,7 @@
 	}
 
 	function loadJson(sel) {
-	    var sel_m = new Date ('2022-' + add_zero(sel+1) + '-01');
+	    var sel_m = new Date ('2023-' + add_zero(sel+1) + '-01');
 		dtPick(sel_m);
 		select_m.selectedIndex = sel	
 		calendar       = json_val.calendar;	
