--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
 	var	dor1530_rab = 0;
 	var	dor1530_prazd = 0;	
 	
-	const prazdniki = ['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-04', '2023-01-05', '2023-01-06', '2023-01-07', '2023-01-08',
-			   '2023-02-23', '2023-02-24', '2023-03-08', '2023-04-21', '2023-05-01', '2023-05-08', '2023-05-09', '2023-06-12',
-			   '2023-06-28', '2023-10-11', '2023-11-04', '2023-11-06'];
-	const korotkiy = ['2023-02-22', '2023-03-07', '2023-04-20', '2023-06-27', '2023-10-10', '2023-11-03'];				   
+	const prazdniki = ['2024-01-01', '2024-01-02', '2024-01-03', '2024-01-04', '2024-01-05', '2024-01-06', 2024-01-07', '2023-01-08',
+			   '2024-02-23', '2024-03-08', '2024-04-10', '2024-04-29', '2024-04-30', '2024-05-01', '2024-05-09', '2024-05-10',
+			   '2024-06-12', '2024-06-16', '2024-06-17', '2024-10-11', '2024-11-04'];
+	const korotkiy = ['2024-02-22', '2024-03-07', '2024-04-09', '2024-05-08', '2024-06-11', '2024-10-10', '2024-11-02'];				   
 
 	function calculate(mesto, daty, id_mess, attr_mess) { 
 		var All115 = 0;
