--- a/index.html
+++ b/index.html
@@ -328,10 +328,10 @@
 	var	dor1530_rab = 0;
 	var	dor1530_prazd = 0;	
 	
-	const prazdniki = ['2024-01-01', '2024-01-02', '2024-01-03', '2024-01-04', '2024-01-05', '2024-01-06', '2024-01-07', '2024-01-08',
-			   '2024-02-23', '2024-03-08', '2024-04-10', '2024-04-29', '2024-04-30', '2024-05-01', '2024-05-09', '2024-05-10',
-			   '2024-06-12', '2024-06-16', '2024-06-17', '2024-10-11', '2024-11-04'];
-	const korotkiy = ['2024-02-22', '2024-03-07', '2024-04-09', '2024-05-08', '2024-06-11', '2024-10-10', '2024-11-02'];				   
+	const prazdniki = ['2025-01-01', '2025-01-02', '2025-01-03', '2025-01-04', '2025-01-05', '2025-01-06', '2025-01-07', '2025-01-08',
+			   '2025-02-23', '2025-03-08', '2025-03-30', '2025-03-31', '2025-05-01', '2025-05-02', '2025-05-08', '2025-05-09',
+			   '2025-06-06', '2025-06-12', '2025-06-13', '2025-10-11', '2025-10-13', '2025-11-03', '2025-11-04'];
+	const korotkiy = ['2025-03-07', '2025-04-30', '2025-06-05', '2025-06-11', '2025-10-10', '2025-11-01'];				   
 
 	function calculate(mesto, daty, id_mess, attr_mess) { 
 		var All115 = 0;
