--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 			</div>				
 			<footer class="footer fixed-bottom">
 				<div class="container">
+					<div style="font-weight:bold;font-size:9px;text-align:center;">2025</div>
 					<div style="font-weight:bold;font-size:9px;text-align:left;padding-right:3px;">mustafin.ik@mail.ru</div>	
 				</div> 
 			</footer> 
