--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
 				</select>	 -->                                                    
 				<div class="input-group">                                           
 					<select id="select_m" onchange="loadJson(this.selectedIndex);" c="select" style="font-size:14px;font-weight:bold;background:#E9ECEF;border:1px solid #C0C0C0;border-radius:4px;width:100%;margin:0;height:38px;padding-left:7px;">
-						<option id="m1" value="Январь">Январь</option>              
-						<option id="m2" value="Февраль">Февраль</option>
-						<option id="m3" value="Март">Март</option>
-						<option id="m4" value="Апрель">Апрель</option>
-						<option id="m5" value="Май">Май</option>
-						<option id="m6" value="Июнь">Июнь</option>
-						<option id="m7" value="Июль">Июль</option>
-						<option id="m8" value="Август">Август</option>
-						<option id="m9" value="Сентябрь">Сентябрь</option>
-						<option id="m10" value="Октябрь">Октябрь</option>		
-						<option id="m11" value="Ноябрь">Ноябрь</option>
-						<option id="m12" value="Декабрь">Декабрь</option>									
+						<option id="m1" value="Январь 2025">Январь 2025</option>              
+						<option id="m2" value="Февраль 2025">Февраль 2025</option>
+						<option id="m3" value="Март 2025">Март 2025</option>
+						<option id="m4" value="Апрель 2025">Апрель 2025</option>
+						<option id="m5" value="Май 2025">Май 2025</option>
+						<option id="m6" value="Июнь 2025">Июнь 2025</option>
+						<option id="m7" value="Июль 2025">Июль 2025</option>
+						<option id="m8" value="Август 2025">Август 2025</option>
+						<option id="m9" value="Сентябрь 2025">Сентябрь 2025</option>
+						<option id="m10" value="Октябрь 2025">Октябрь 2025</option>		
+						<option id="m11" value="Ноябрь 2025">Ноябрь 2025</option>
+						<option id="m12" value="Декабрь 2025">Декабрь 2025</option>									
 					</select>
 				</div>
 				
@@ -311,7 +311,6 @@
 			</div>				
 			<footer class="footer fixed-bottom">
 				<div class="container">
-					<div style="font-weight:bold;font-size:9px;text-align:center;">2025</div>
 					<div style="font-weight:bold;font-size:9px;text-align:left;padding-right:3px;">mustafin.ik@mail.ru</div>	
 				</div> 
 			</footer> 
