--- a/index.html
+++ b/index.html
@@ -558,7 +558,10 @@
 		
 		let summaVseh115 = (parseFloat(okl115) + parseFloat(dvoynaya115) + parseFloat(doroga_out115) + parseFloat(n115)).toFixed(1); //+ parseInt(nadbavka115);
 		let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530) + parseFloat(premia_pred.value) + parseFloat(nadbavka115)).toFixed(1);
-		
+
+		let summaVseh115_forPrem = (parseFloat(okl115) + parseFloat(dvoynaya115/2) + parseFloat(doroga_out115) + parseFloat(n115)).toFixed(1); //+ parseInt(nadbavka115);
+		let summaVseh1530_forPrem = (parseFloat(okl1530) + parseFloat(nadbavka1530/2) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530) + parseFloat(premia_pred.value) + parseFloat(nadbavka115)).toFixed(1);
+
 		//let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530)).toFixed(1);
 		//+ parseFloat(premia_pred.value) + parseFloat(nadbavka115)
 		
@@ -566,15 +569,15 @@
 		let rk_only1530 = parseFloat(summaVseh1530 * 0.15).toFixed(1);
 		rk_only.value = (parseFloat(rk_only115) + parseFloat(rk_only1530)).toFixed(1);
 		
-		let rk_only115_forPrem = parseFloat((summaVseh115 - parseFloat(dvoynaya115) + parseFloat(dvoynaya115/2)) * 0.15).toFixed(1);
-		let rk_only1530_forPrem = parseFloat((summaVseh1530 - parseFloat(dvoynaya1530) + parseFloat(dvoynaya1530/2))* 0.15).toFixed(1);
+		let rk_only115_forPrem = parseFloat(summaVseh115_forPrem) * 0.15).toFixed(1);
+		let rk_only1530_forPrem = parseFloat(summaVseh1530_forPrem)* 0.15).toFixed(1);
 		let rk_only_forPrem = (parseFloat(rk_only115_forPrem) + parseFloat(rk_only1530_forPrem)).toFixed(1);
 		
 		let ndfl_only115 = ((parseFloat(summaVseh115) + parseFloat(rk_only115)) * ndfl_perc.value / 100).toFixed(1);
 		let ndfl_only1530 = ((parseFloat(summaVseh1530) + parseFloat(rk_only1530)) * ndfl_perc.value / 100).toFixed(1);
 		ndfl_only.value = Math.ceil(parseFloat(ndfl_only115) + parseFloat(ndfl_only1530)); 				
 		
-		premia_tek.value = ((parseFloat(okl.value) + parseFloat(nadbavka.value) + parseFloat(dvoynaya.value)/2 + parseFloat(doroga_out.value) + parseFloat(rk_only_forPrem)) * parseFloat(premia.value) - ndfl_only115 - ndfl_only1530).toFixed(1);
+		premia_tek.value = ((parseFloat(okl.value) + parseFloat(nadbavka.value) + parseFloat(dvoynaya.value)/2 + parseFloat(doroga_out.value) + parseFloat(rk_only_forPrem)) * parseFloat(premia.value) - parseFloat(ndfl_only.value)).toFixed(1);
 		
 		oklad28.value = parseFloat(parseFloat(summaVseh115) + parseFloat(rk_only115) - parseFloat(ndfl_only115)).toFixed(1);
 		oklad13.value = parseFloat(parseFloat(summaVseh1530) + parseFloat(rk_only1530) - parseFloat(ndfl_only1530)).toFixed(1);
@@ -747,4 +750,5 @@
 	function handleTouchMove(e) {if (!xDown || !yDown) return;let xUp = e.touches[0].clientX;let yUp = e.touches[0].clientY;xDiff = xDown - xUp;yDiff = yDown - yUp;}
 </script>
 </html>
+
 
