--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Оклад:</span>
 					</div>		
-					<input type="number" id="okl" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
+					<input type="number" id="okl" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" step="any" readonly>
 				</div>
 				<div class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
@@ -249,14 +249,19 @@
 					</div>		
 					<input type="number" id="premia_pred" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
 				</div>	
-				
+				<div class="input-group">
+					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
+						<span id="rk_premia_pred_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РК Премия: --</span>
+					</div>		
+					<input type="number" id="rk_premia_pred" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
+				</div>					
 				<div class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span id="premia_text" class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">Премия: --</span>
 					</div>		
 					<input type="number" id="premia_tek" class="form-control input-sm" style="text-align:center;background:white;padding:0;height:21px;font-size:14px;" readonly>
 				</div>	
-				<div class="input-group">
+				<div hidden class="input-group">
 					<div class="input-group-prepend" style="width:50%;padding:0;height:21px;font-weight:bold;">
 						<span class="input-group-text" style="width:100%;font-size:14px;font-weight:bold;">РК / НДФЛ:</span>
 					</div>		
@@ -510,9 +515,10 @@
 		if (premia.value === '' && premia.value.length == 0) premia.value = 0;
 		
 		let rub_v_сhas = (oklad.value / rab_chas.value).toFixed(3);
-		let okl115 = ((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas).toFixed(1);
-		let okl1530 = ((returnOfis.All1530 + returnRaz.All1530 + returnDor.All1530) * rub_v_сhas).toFixed(1);		
-		okl.value = parseInt(parseFloat(okl115) + parseFloat(okl1530));
+		let okl115 = ((returnOfis.All115 + returnRaz.All115 + returnDor.All115) * rub_v_сhas).toFixed(2);
+		let okl1530 = ((returnOfis.All1530 + returnRaz.All1530 + returnDor.All1530) * rub_v_сhas).toFixed(2);
+		okl.value = parseFloat(parseFloat(okl115) + parseFloat(okl1530)).toFixed(2);
+		
 		//okl.value = parseInt((returnOfis.All115 + returnOfis.All1530 + returnRaz.All115 + returnRaz.All1530 + returnDor.All115 + returnDor.All1530) * rub_v_сhas);
 		console.log("returnOfis: ");
 		console.log(returnOfis);
@@ -529,68 +535,50 @@
 
 		let summ115 = parseInt(returnRaz.All115) + parseInt(returnDor.All115) + parseInt((returnDor.Vyh115 + returnDor.Prazd115) * 8) + parseInt((prazd_vyh115 - returnOfis.Prazd115 - returnOfis.Vyh115) * 8);
 		let summ1530 = parseInt(returnRaz.All1530) + parseInt(returnDor.All1530) + parseInt((returnDor.Vyh1530 + returnDor.Prazd1530) * 8) + parseInt((prazd_vyh1530 - returnOfis.Prazd1530 - returnOfis.Vyh1530) * 8);
-		console.log("summ115: " + summ115);
-		console.log("summ1530: " + summ1530);
 		
-		let nadbavka115 = (summ115 * rub_v_сhas * 0.25).toFixed(1);
-		let nadbavka1530 = (summ1530 * rub_v_сhas * 0.25).toFixed(1);
-		nadbavka.value = (parseFloat(nadbavka115) + parseFloat(nadbavka1530)).toFixed(1);
-		console.log("nadbavka115 = " + nadbavka115);
-		console.log("nadbavka1530 = " + nadbavka1530);
-		
-		let dvoynaya115 = (prazd_vyh115 * rub_v_сhas * 8 * 2).toFixed(1);
-		let dvoynaya1530 = (prazd_vyh1530 * rub_v_сhas * 8 * 2).toFixed(1);
-		dvoynaya.value = (parseFloat(dvoynaya115) + parseFloat(dvoynaya1530)).toFixed(1);
-		console.log("dvoynaya115 = " + dvoynaya115);
-		console.log("dvoynaya1530 = " + dvoynaya1530);	
+		let nadbavka115 = (summ115 * rub_v_сhas * 0.25).toFixed(2);
+		let nadbavka1530 = (summ1530 * rub_v_сhas * 0.25).toFixed(2);
+		nadbavka.value = (parseFloat(nadbavka115) + parseFloat(nadbavka1530)).toFixed(2);
+		console.log("nadbavka   [115 + 1530] = " + nadbavka115 + " + " + nadbavka1530 + " = " + nadbavka.value);
 
-		let doroga_out115 = parseFloat((returnDor.Vyh115 + returnDor.Prazd115) * rub_v_сhas * 8).toFixed(1);
-		let doroga_out1530 = parseFloat((returnDor.Vyh1530 + returnDor.Prazd1530) * rub_v_сhas * 8).toFixed(1);
-		doroga_out.value = (parseFloat(doroga_out115) + parseFloat(doroga_out1530)).toFixed(1);
+		let dvoynaya115 = (prazd_vyh115 * rub_v_сhas * 8 * 2).toFixed(2);
+		let dvoynaya1530 = (prazd_vyh1530 * rub_v_сhas * 8 * 2).toFixed(2);
+		dvoynaya.value = (parseFloat(dvoynaya115) + parseFloat(dvoynaya1530)).toFixed(2);
+		console.log("dvoynaya   [115 + 1530] = " + dvoynaya115 + " + " + dvoynaya1530 + " = " + dvoynaya.value);
+
+		let doroga_out115 = parseFloat((returnDor.Vyh115 + returnDor.Prazd115) * rub_v_сhas * 8).toFixed(2);
+		let doroga_out1530 = parseFloat((returnDor.Vyh1530 + returnDor.Prazd1530) * rub_v_сhas * 8).toFixed(2);
+		doroga_out.value = (parseFloat(doroga_out115) + parseFloat(doroga_out1530)).toFixed(2);
+		console.log("doroga_out [115 + 1530] = " + doroga_out115 + " + " + doroga_out1530 + " = " + doroga_out.value);
 		
-		//doroga_out.value = parseInt((returnDor.Vyh115 + returnDor.Vyh1530 + returnDor.Prazd115 + returnDor.Prazd1530) * rub_v_сhas * 8);
-	
         let n115 = parseFloat(night115.value * rub_v_сhas * 0.4).toFixed(2);
         let n1530 = parseFloat(night1530.value * rub_v_сhas * 0.4).toFixed(2);
 		noch.value = (parseFloat(n115) + parseFloat(n1530)).toFixed(2);
-		console.log("night115 = " + n115);
-		console.log("night1530 = " + n1530);
+		console.log("night      [115 + 1530] = " + n115 + " + " + n1530 + " = " + noch.value);
 		
-		let summaVseh115 = (parseFloat(okl115) + parseFloat(dvoynaya115) + parseFloat(doroga_out115) + parseFloat(n115)).toFixed(1); //+ parseInt(nadbavka115);
-		let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530) + parseFloat(premia_pred.value) + parseFloat(nadbavka115)).toFixed(1);
-
-		let summaVseh115_forPrem = (parseFloat(okl115) + parseFloat(dvoynaya115/2) + parseFloat(doroga_out115) + parseFloat(n115)).toFixed(1); //+ parseInt(nadbavka115);
-		let summaVseh1530_forPrem = (parseFloat(okl1530) + parseFloat(nadbavka1530/2) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530) + parseFloat(premia_pred.value) + parseFloat(nadbavka115)).toFixed(1);
-
-		//let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530)).toFixed(1);
-		//+ parseFloat(premia_pred.value) + parseFloat(nadbavka115)
+		let summaVseh115 = (parseFloat(okl115) + parseFloat(dvoynaya115) + parseFloat(doroga_out115) + parseFloat(n115)).toFixed(2);
+		let summaVseh1530 = (parseFloat(okl1530) + parseFloat(nadbavka1530) + parseFloat(dvoynaya1530) + parseFloat(doroga_out1530) + parseFloat(n1530) + parseFloat(premia_pred.value) + parseFloat(rk_premia_pred.value)+ parseFloat(nadbavka115)).toFixed(2);
 		
-		let rk_only115 = parseFloat(summaVseh115 * 0.15).toFixed(1);
-		let rk_only1530 = parseFloat(summaVseh1530 * 0.15).toFixed(1);
+		let rk_only115 = parseFloat(summaVseh115 * 0.15).toFixed(2);
+		let rk_only1530 = parseFloat(summaVseh1530 * 0.15).toFixed(2);
+		rk_only.value = (parseFloat(rk_only115) + parseFloat(rk_only1530)).toFixed(2);
 		
-		rk_only.value = (parseFloat(rk_only115) + parseFloat(rk_only1530)).toFixed(1);
-		
-		let rk_only115_forPrem = (parseFloat(summaVseh115_forPrem) * 0.15).toFixed(1);
-		let rk_only1530_forPrem = (parseFloat(summaVseh1530_forPrem)* 0.15).toFixed(1);
-		let rk_only_forPrem = (parseFloat(rk_only115_forPrem) + parseFloat(rk_only1530_forPrem)).toFixed(1);
-		
-		let ndfl_only115 = ((parseFloat(summaVseh115) + parseFloat(rk_only115)) * ndfl_perc.value / 100).toFixed(1);
-		let ndfl_only1530 = ((parseFloat(summaVseh1530) + parseFloat(rk_only1530)) * ndfl_perc.value / 100).toFixed(1);
+		let ndfl_only115 = ((parseFloat(summaVseh115) + parseFloat(rk_only115)) * ndfl_perc.value / 100).toFixed(2);
+		let ndfl_only1530 = ((parseFloat(summaVseh1530) + parseFloat(rk_only1530)) * ndfl_perc.value / 100).toFixed(2);
 		ndfl_only.value = Math.ceil(parseFloat(ndfl_only115) + parseFloat(ndfl_only1530)); 				
 		
-//		premia_tek.value = ((parseFloat(okl.value) + parseFloat(nadbavka.value) + parseFloat(dvoynaya.value)/2 + parseFloat(doroga_out.value) + parseFloat(rk_only_forPrem)) * parseFloat(premia.value) - parseFloat(ndfl_only1530)).toFixed(1);
-		premia_tek.value = ((parseFloat(okl.value) + parseFloat(nadbavka.value) + parseFloat(dvoynaya.value)/2 + parseFloat(doroga_out.value)) * parseFloat(premia.value) - parseFloat(ndfl_only1530)).toFixed(1);
+		premia_tek.value = ((parseFloat(okl.value) + parseFloat(nadbavka.value) + parseFloat(dvoynaya.value)/2 + parseFloat(doroga_out.value)) * parseFloat(premia.value)).toFixed(2);
+		
 		console.log("premia_tek = " + premia_tek.value);	
 		
-		oklad28.value = parseFloat(parseFloat(summaVseh115) + parseFloat(rk_only115) - parseFloat(ndfl_only115)).toFixed(1);
-		oklad13.value = parseFloat(parseFloat(summaVseh1530) + parseFloat(rk_only1530) - parseFloat(ndfl_only1530)).toFixed(1);
-		//oklad13.value = summaVseh + parseInt(rk_only1530) - parseInt(ndfl_only1530) - parseInt(summaVseh115);
+		oklad28.value = parseFloat(parseFloat(summaVseh115) + parseFloat(rk_only115) - parseFloat(ndfl_only115)).toFixed(2);
+		oklad13.value = parseFloat(parseFloat(summaVseh1530) + parseFloat(rk_only1530) - parseFloat(ndfl_only1530)).toFixed(2);
 
-		chist_all.value = (parseFloat(oklad28.value) + parseFloat(oklad13.value)).toFixed(1); 
-		chist_bez.value = (parseFloat(oklad28.value) + parseFloat(oklad13.value) + parseFloat(premia_tek.value) - parseFloat(premia_pred.value)).toFixed(1); 
+		chist_all.value = (parseFloat(oklad28.value) + parseFloat(oklad13.value)).toFixed(2); 
+		chist_bez.value = (parseFloat(oklad28.value) + parseFloat(oklad13.value) + parseFloat(premia_tek.value) - parseFloat(premia_pred.value) - parseFloat(rk_premia_pred.value)).toFixed(2); 
 		
 		rvc.value = parseFloat(rub_v_сhas).toFixed(3);
-		rvs.value = parseFloat(rub_v_сhas * 8).toFixed(1);
+		rvs.value = parseFloat(rub_v_сhas * 8).toFixed(2);
 		
 		day_of.value = returnOfis.Poln115 + returnOfis.Poln1530 + returnOfis.Sokr115 + returnOfis.Sokr1530;
 		day_raz.value = returnRaz.Poln115 + returnRaz.Poln1530 + returnRaz.Sokr115 + returnRaz.Sokr1530;
@@ -641,7 +629,10 @@
 		premia.value          = premia_ar[sel];	
 		premia_text.innerHTML = "Премия: " + select_m.options[sel].value;		
 		premia_pred.value     = premia_pred_ar[selected];
+		
+		rk_premia_pred.value     = (parseFloat(premia_pred.value) * 0.15).toFixed(2);
 		premia_pred_text.innerHTML = "Премия: " + select_m.options[selected].value;
+		rk_premia_pred_text.innerHTML = "РК Премия: " + select_m.options[selected].value;
 		chist_all_text.innerHTML = "Заработано за " + select_m.options[sel].value + ":";
 		prof.value         = prof_ar[sel];
 		oklad28_text.value = '28 ' + months[sel];
@@ -753,7 +744,6 @@
 	function handleTouchMove(e) {if (!xDown || !yDown) return;let xUp = e.touches[0].clientX;let yUp = e.touches[0].clientY;xDiff = xDown - xUp;yDiff = yDown - yUp;}
 </script>
 </html>
-
 
 
 
