--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
 				</div>	
 
 				
-				<div class="col-6 col-sm-6 col-md-6 col-xl-6 p-0">
+				<div hidden class="col-6 col-sm-6 col-md-6 col-xl-6 p-0">
 					<span class="input-group-text" style="border-radius: 4px 0 0 0; width:100%;font-size:14px;font-weight:bold;height:21px;"></span>
 					<span class="input-group-text" style="border-radius: 0; width:100%;font-size:14px;font-weight:bold;height:21px;">Отраб. дней:</span>
 					<span class="input-group-text" style="border-radius: 0 0 0 4px; width:100%;font-size:14px;font-weight:bold;height:21px;">Отраб. часов:</span>
 				</div>
-				<div class="col-6 col-sm-6 col-md-6 col-xl-6 p-0">
+				<div hidden class="col-6 col-sm-6 col-md-6 col-xl-6 p-0">
 					<div class="input-group">
 						<input type="text" class="form-control input-sm" value="ВСЕГО" style="text-align:center;padding:0;border-radius:0;height:21px;font-size:12px;font-weight:bold;" readonly>
 						<input type="text" class="form-control input-sm" value="ОФ" style="text-align:center;padding:0;height:21px;font-size:12px;font-weight:bold;" readonly>
@@ -356,7 +356,7 @@
 			<footer class="footer fixed-bottom">
 				<div class="container">
 					<span style="font-weight:bold;font-size:9px;text-align:left;padding-right:3px;">mustafin.ik@mail.ru</div>	
-					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 05.10.2025</div>
+					<div style="font-weight:bold;font-size:9px;text-align:right;padding-right:3px;">Версия от 06.10.2025</div>
 				</div> 
 			</footer> 
 		</div>	
@@ -820,6 +820,7 @@
 	function handleTouchMove(e) {if (!xDown || !yDown) return;let xUp = e.touches[0].clientX;let yUp = e.touches[0].clientY;xDiff = xDown - xUp;yDiff = yDown - yUp;}
 </script>
 </html>
+
 
 
 
